# Parallel-micro-aevol

./: .gitignore  Algorithms.cu  Algorithms.cuh  CMakeLists.txt  Dna.cpp  Dna.h  DnaMutator.cpp  DnaMutator.h  ExpManager.cpp  ExpManager.h  GPUDna.cuh  JumpingMT.cpp  JumpingMT.h  Makefile  MutationEvent.cpp  MutationEvent.h  Organism.cpp  Organism.h  Promoter.h  README.md  RNA.h  Stats.cpp  Stats.h  Threefry.cpp  main.cpp
SFMT-src-1.4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
test/: CMakeLists.txt  IndividualTest.cpp  threefry.cu
test/googletest/: .gitrepo
